<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">team7</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_questions">QuestionsActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_user_list">User List</string>
    <string name="questioninfo">Question Information</string>
    <string name="question_content">Questions Contents</string>
    <string name="see_all_answers">See All Answers</string>
    <string name="accepted_answer">Accepted Answer</string>
    <string name="accepted_answer_contents">Accepted Answer Contents</string>
    <string name="menu_create"> Create question</string>
    <string name="title_activity_home">Team 7</string>
    <string name="home_search">Fake Search</string>
    <string name="home_make_question">Ask a question</string>
    <string name="home_tag">Tags</string>
    <string name="home_questions">Questions</string>
    <string name="home_users">Users</string>
    <string name="home_myacc">My Account</string>
    <string name="home_query_hint">Question Search</string>
    <string name="title_activity_question_information">Question information</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_tag_cloud">Tag Cloud</string>
    <string name="adv_radio_question">Question</string>
    <string name="avd_radio_tag">Tag</string>
    <string name="avd_radio_tag1">Tag</string>
    <string name="avd_radio_user">User</string>
    <string name="home_text_advsearch">Advanced Search</string>
    <string name="title_activity_answer_item">Answer_item</string>
    <string name="multiTagHint">Search for tags(max 4 tags)</string>
    <string name="singelUserHint">Search for a user</string>
    <string name="title_activity_question_item_tab">QuestionItemTab</string>
    <string name="title_activity_answers">AnswersActivity</string>
    <string name="title_activity_comments">Comments</string>
    <string name="title_activity_ask_question">Ask Question</string>
    <string name="title_activity_popup_answer_question">PopupAnswerQuestionActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_posts">ProfilePostsActivity</string>
    <string name="menu_edit_question">Edit question</string>
    <string name="menu_remove_question">Remove question</string>
    <string name="heat">HEAT</string>
    

</resources>