<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundimage"
    tools:context=".HomeActivity" >

    <SearchView
        android:id="@+id/searchView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:queryHint="@string/home_query_hint" >
        
        
        

    </SearchView>

    <TextView
        android:id="@+id/home_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/home_text_advsearch" />

    <Button
        android:id="@+id/home_make_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_make_question" />

    <Button
        android:id="@+id/home_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_tag" />

    <Button
        android:id="@+id/home_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_questions" />

    <Button
        android:id="@+id/home_Users"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_users" />

    <Button
        android:id="@+id/home_myaccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_myacc" />


</LinearLayout>